{
    "name": "MainInputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "0d1228c9-a4ed-4469-8aa7-f5dc13055233",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c58875b3-641c-43cf-a437-41265f450123",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Value",
                    "id": "1e2b822b-1a9a-41a7-82d5-aa0e02b80c46",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "1ba29c73-ebba-4853-9df7-e5d3dfe1d8dd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomStartTouch",
                    "type": "Value",
                    "id": "f9b64091-9527-4298-b8a8-3f17bb935e7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstFinger",
                    "type": "Value",
                    "id": "34718abf-c52c-4cd7-bcbc-e69408111aa2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondFinger",
                    "type": "Value",
                    "id": "c7c1ac20-163b-4ddd-a5dc-2353849eb3d9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc4ab176-b2ce-4a46-9843-f0f62d0bfc92",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Mouse",
                    "id": "96d1b23f-6ecb-4853-bc9c-5ce8628ac4c4",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "8fbd7a19-04ef-425e-bd43-1341f4a1d53c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "94029131-7a3f-4ff8-87cc-adf9f7d45ddb",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "3f5e7840-ac67-4a79-a318-622f2b5152b5",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "a4baa581-a6cc-479b-9352-cdef8e913b16",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "5d5078a7-36d9-45a9-9a10-2618ee93ffa5",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ac33f663-3528-4731-a57d-1e9812891114",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "FirstFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcfbdefd-ebf3-4958-bc0b-a3f2f41f5e55",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "SecondFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b332e9a6-6657-4277-a0ba-72df3bf526d0",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ZoomStartTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Mouse",
                    "id": "57056978-781e-43f4-a91d-d14fbabd8a2e",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2e508a5b-23de-4fe8-9784-a996ad4f7300",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "34eb9d51-7718-4561-b056-858c1abcc249",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "d7d0f9f4-5d87-4789-951d-c53c3c8fcec0",
                    "path": "OneModifier",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "410f8276-7c3a-42fe-b253-363b5a9548d7",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "465d93b9-45bb-4bda-add8-bd6789f506b9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Touch",
            "id": "5dc36900-0087-4ca4-923c-0ee43707da77",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "4f675008-0950-44a5-8de9-a4663727d011",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d016e4cf-9668-4dce-bf56-09bebae232fb",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}